Baseclass implementation progress

--- a/App.config
+++ b/App.config
@@ -4,5 +4,6 @@
     <add key="Browser" value="Firefox"/>
     <add key="Username" value="Gabriel Calvo"/>
     <add key="Password" value ="pass"/>
+    <add key="Uri" value="https://the-internet.herokuapp.com/"/>
   </appSettings>
 </configuration>
