Some simple waits added, navigation methods, and some basic params

--- a/App.config
+++ b/App.config
@@ -5,5 +5,7 @@
     <add key="Username" value="Gabriel Calvo"/>
     <add key="Password" value ="pass"/>
     <add key="Uri" value="https://the-internet.herokuapp.com/"/>
+    <add key="TimeOut" value="15"/>
+    <add key="ElementTimeOut" value="15"/>
   </appSettings>
 </configuration>
